[package]
name = "ksite"
version = "0.8.11"
edition = "2021"

[profile.release]
panic = "abort" # CAUTIONS! cause tokio worker abort
strip = true
lto = "fat"
codegen-units = 1
# opt-level = "z"

# Best check speed, `cargo check --profile=ci`
[profile.ci]
inherits = "release"
opt-level = 0
lto = "off"
panic = "abort"
debug-assertions = true
incremental = false
codegen-units = 256

# Best incremental build speed, less disk usage, `mold -run cargo run`
[profile.dev]
# debug = false # this switch disabled backtrace
panic = "abort"
[profile.dev.package."*"]
debug = false
strip = true
opt-level = "z"

[dependencies]
anyhow = "1"
askama_escape = "0.10"
axum = { version = "0.6", default-features = false, features = ["http1", "http2", "tokio"] }
flate2 = "1"
futures-core = "0.3"
httpdate = "1"
hyper = { version = "0.14", features = ["client"] }
hyper-rustls = { version = "0.24", default-features = false }
once_cell = "1"
rand = "0.8"
ricq = "=0.1.20" # unstable, fixed version here
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
tokio-rustls = "0.24"
tokio-util = { version = "0.7", features = ["io"] }
webpki-roots = "0.23"
tower = "0.4"
# mimalloc = { version = "0.1", default-features = false }
# rpmalloc = "0.2"

[patch.crates-io]
# ricq = { path = "/home/kkocdko/misc/code/ricq/ricq" }
ricq = { rev = "5182cb7", git = "https://github.com/lz1998/ricq" }
prost-build = { path = "src/crates/prost-gen" } # for `ricq-core`
tracing = { path = "src/crates/tracing-fake" }
