[package]
name = "ksite"
version = "0.10.5"
edition = "2021"

[profile.release]
panic = "abort" # CAUTIONS! cause tokio worker abort
strip = true
lto = "fat"
codegen-units = 1
# opt-level = "z"

# Best check speed, `cargo check --profile=ci`
[profile.ci]
inherits = "release"
opt-level = 0
lto = "off"
panic = "abort"
debug-assertions = true
incremental = false
codegen-units = 256

# Best incremental build speed, less disk usage, `mold -run cargo run`
[profile.dev]
# debug = false # this switch disabled backtrace
[profile.dev.package."*"]
debug = false
strip = true
opt-level = "z"

[dependencies]
anyhow = "1"
askama_escape = "0.10"
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "tokio"] }
flate2 = "1"
futures-core = "0.3"
httpdate = "1"
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
ricq = { rev = "034c12258e34160e8ae433761c1d3b59a67ba334", git = "https://github.com/lz1998/ricq" }
tls-http = { path = "src/crates/tls-http" }

[patch.crates-io]
prost-build = { path = "src/crates/prost-gen" } # for `ricq-core`
tracing = { path = "src/crates/tracing-fake" }
