[package]
name = "prost-build" # faked name
version = "0.9.900"
edition = "2021"

[lib]
path = "lib.rs"

# [[bin]]
# name = "prost-gen"
# path = "lib.rs"

[profile.dev]
debug = false
panic = "abort"
[profile.dev.package."*"]
strip = true
opt-level = "z"

# [dependencies]
# heck = "0.4"
# prost-build-offical = { version = "0.9", package = "prost-build" }
