[package]
name = "tls-http"
version = "0.1.0"
edition = "2021"
description = "A HTTPS client and server, use rustls 0.22 + hyper 1 + tower-service 0.3"

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
tower-service = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
tokio = { version = "1", features = ["net"] }
webpki-roots = "0.26"
tokio-rustls = "0.25"
